<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">한동어플</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="time_table">시간표</string>
    <string name="ddosuni">또순이부동산</string>
    <string name="title_activity_adapter_menu">Adapter_menu</string>
    <string name="title_activity_menu_top_fragment">MenuTopFragment</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_alarm_page">AlarmPage</string>
    <string name="title_yasick_main">한동야식</string>
    <string name="title_yasick_my_menu">MY야식</string>
    <string name="yasick_tab_all_list">전체보기</string>
    <string name="yasick_tab_zzimdark">찜닭 및 식사</string>
    <string name="yasick_tab_chicken">치킨</string>
    <string name="title_activity_run_info">RunInfo</string>
    <string name="title_activity_bus">Bus</string>
    <string name="title_activity_bus_adapter">BusAdapter</string>
    <string name="title_activity_bus_manager">BusManager</string>
    <string name="title_activity_bus_data">BusData</string>
    <string name="title_activity_bus_to__school">Bus_to_School</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">Setting</string>
    <string name="setting">설정</string>
    <string name="yasick_page_btn_menu">전단지</string>
    <string name="yasick_page_btn_call">전화 걸기</string>
    <string name="yasick_page_btn_favorites">즐겨찾기</string>
    <string name="yasick_page_title_storeInfo">업체 정보</string>
    <string name="yasick_page_holiday">휴무일 정보</string>
    <string name="yasick_page_runtime">영업 시간</string>
    <string name="yasick_page_special">특이 사항</string>
    <string name="yasick_page_title_menu">메뉴</string>
    <string name="title_favorites">즐겨 찾기</string>
    <string name="title_recent">최근 통화 목록</string>
    <string name="btn_remove">지우기</string>
    <string name="title_activity_notice_main">NoticeMain</string>
    <string name="title_notice_main">공지사항</string>
    <string name="notice_title_general">일반 공지</string>
    <string name="title_classnotice">수업 공지</string>
    <string name="title_notice_material">자료실</string>
    <string name="title_notice_hw">과제 공지</string>
    <string name="title_activity_class_notice">ClassNotice</string>
    <string name="title_activity_material_notice">MaterialNotice</string>
    <string name="title_activity_hw_notice">HwNotice</string>
    <string name="choose_subject">과목 선택</string>
    <string name="page_1">1</string>
    <string name="page_2">2</string>
    <string name="page_3">3</string>
    <string name="page_4">4</string>
    <string name="page_5">5</string>
    <string name="notice_article_num">No.</string>
    <string name="notice_article_title">제목</string>
    <string name="notice_article_date">날짜</string>
    <string name="notice_general_main">중요 공지</string>
    <string name="notice_general_all"> 전체</string>
    <string name="title_activity_notice_contents">NoticeContents</string>
    <string name="notice_article_submitdue">제출 기간</string>
    <string name="notice_article_submitstatus">제출</string>
    <string name="title_activity_hgushop">Hgushop</string>
    <string name="hgushop_location">위치</string>
    <string name="hgushop_category">카테고리</string>
    <string name="time_table_menu_sat">토요일 감추기</string>
    <string name="time_table_menu_seven">7교시 감추기</string>
    <string name="time_table_menu_eight">8교시 감추기</string>
    <string name="time_table_menu_nine">9교시 감추기</string>
    <string name="time_table_menu_ten">10교시 감추기</string>
    <string name="title_activity_hgushop_map">HgushopMap</string>
    <string name="time_table_menu_inc">글자 크기 키우기</string>
    <string name="time_table_menu_dec">글자 크기 줄이기</string>|
    <string name="hgushop_shopname">Store Name</string>
    <string name="hgushop_info">Information</string>
    <string name="hgushop_title">HGU SHOP</string>
    <string name="title_activity_hgushop_each_page">HgushopEachPage</string>
    <string name="hgushop_title_contents">혜택</string>
    <string name="hgushop_title_map">지도</string>
    <string name="title_activity_hgutube">Hgutube</string>
    <string name="hgutube_title">HguTube</string>
    <string name="title_activity_hgushop_between_page">HgushopBetweenPage</string>
    <string name="hgushop_between_to_map">지도로\n돌아가기</string>
    <string name="hgushop_between_to_shop">SHOP\n페이지</string>
    <string name="login_guide">GHOST 한동어플에서는 개인정보를 수집하지 않습니다.</string>
    <string name="login_id">Hisnet ID:</string>
    <string name="login_password">Hisnet Passward:</string>
    <string name="cancel">취소</string>
    <string name="notice_guide">확대/축소를 위한 터치는 글 위에서만 가능합니다.</string>
    <string name="alarm_menu_guide">알람 울릴 시</string>
    <string name="alarm_menu_only_vibe">진동만</string>
    <string name="alarm_menu_not_only_vibe">소리 + 진동</string>
    <string name="title_activity_chat_room">chat_roomActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_chat_loading">ChatLoading</string>

    <string name="title_activity_room_list">RoomList</string>


    <string name="calendar">날짜 선택</string>

    <string name="chat_making_departure">출발지</string>
    <string name="chat_making_arrival">도착지</string>
    <string name="chat_making_crew_num">모집 인원 수</string>
    <string name="chat_making_title">채팅방 만들기</string>

    <string name="roomlist_select1">출발지선택</string>
    <string name="roomlist_select2">도착지선택</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_myroom">myroom</string>
    <string name="title_activity_hisnetgo">hisnetgo</string>
</resources>
