<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/time_table_menu_sat"
        android:checkable="true"
        android:orderInCategory="0"
        android:title="@string/time_table_menu_sat" />
    <item
        android:id="@+id/time_table_menu_seven"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/time_table_menu_seven" />
    <item
        android:id="@+id/time_table_menu_eight"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/time_table_menu_eight" />
    <item
        android:id="@+id/time_table_menu_nine"
        android:checkable="true"
        android:orderInCategory="3"
        android:title="@string/time_table_menu_nine" />
    <item
        android:id="@+id/time_table_menu_ten"
        android:checkable="true"
        android:orderInCategory="4"
        android:title="@string/time_table_menu_ten" />
    <item
        android:id="@+id/time_table_menu_inc"
        android:orderInCategory="5"
        android:title="@string/time_table_menu_inc" />
    <item
        android:id="@+id/time_table_menu_dec"
        android:orderInCategory="6"
        android:title="@string/time_table_menu_dec" />
</menu>