<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/listview_selector_yasick">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textSize="13dp"
        android:textColor="@color/page_button_default"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/notice_article_num"
        android:id="@+id/class_article_row_num"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"></LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="22"
        android:textSize="15dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/notice_article_title"
        android:textColor="#000000"
        android:id="@+id/class_article_row_title"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"></LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:textSize="13dp"
        android:textColor="@color/notice_second_text"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/notice_article_date"
        android:id="@+id/class_article_row_date"
        android:gravity="center"/>
</LinearLayout>