<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="ghost.android.ghosthguapp.notice.ClassNoticeFragment">

    <LinearLayout
        android:id="@+id/material_spinners_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/material_spinner_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/material_spinner_semester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/material_spinner_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:spinnerMode="dropdown" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/material_bottombar_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/material_btn_left"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/left_arrow"
                android:visibility="invisible" />

            <Button
                android:id="@+id/material_btn_1"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/page_1"
                android:textColor="@color/page_button_default"
                android:visibility="invisible" />

            <Button
                android:id="@+id/material_btn_2"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/page_2"
                android:textColor="@color/page_button_default"
                android:visibility="invisible" />

            <Button
                android:id="@+id/material_btn_3"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/page_3"
                android:textColor="@color/page_button_default"
                android:visibility="invisible" />

            <Button
                android:id="@+id/material_btn_4"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/page_4"
                android:textColor="@color/page_button_default"
                android:visibility="invisible" />

            <Button
                android:id="@+id/material_btn_5"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/page_5"
                android:textColor="@color/page_button_default"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/material_btn_right"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/right_arrow"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/material_category_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/material_spinners_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/material_tv_list_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notice_article_num"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/material_tv_list_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/notice_article_title"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/material_tv_list_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/notice_article_date"
            android:textSize="13dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/material_article_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/material_category_bar"
        android:layout_marginBottom="42dp"
        android:fadeScrollbars="false" />

</RelativeLayout>
