<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="ghost.android.ghosthguapp.notice.ClassNoticeFragment">

    <LinearLayout
        android:id="@+id/hw_spinners_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/hw_spinner_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/hw_spinner_semester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/hw_spinner_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hw_category_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/hw_spinners_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hw_tv_list_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/notice_article_title"
            android:textSize="13dp"
            android:textColor="@color/notice_second_text"/>

        <TextView
            android:id="@+id/hw_tv_list_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center"
            android:text="@string/notice_article_submitdue"
            android:textSize="13dp"
            android:textColor="@color/notice_second_text"/>

        <TextView
            android:id="@+id/hw_tv_list_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center"
            android:text="@string/notice_article_submitstatus"
            android:textSize="13dp"
            android:textColor="@color/notice_second_text"/>
    </LinearLayout>

    <ListView
        android:id="@+id/hw_article_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hw_category_bar"
        android:layout_marginBottom="42dp"
        android:fadeScrollbars="false" />

</RelativeLayout>

